# trablho-openmp

./: CMakeCache.txt  Makefile  cmake_install.cmake  lerImagem  lerImagem.cpp
openmp_1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lerImagem  lerImagem.cpp
openmp_2/: CMakeCache.txt  Makefile  cmake_install.cmake  lerImagem  lerImagem.cpp
seq/: CMakeCache.txt  Makefile  cmake_install.cmake  lerImagem  lerImagem.cpp
seq_2/: CMakeCache.txt  Makefile  cmake_install.cmake  img  lerImagem  lerImagem.cpp  manual.txt
